# 340005-SD-99-MCP-Xero-Server

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.simplemotion/: .gitkeep
src/mcp_xero/: __init__.py  __main__.py  server.py
src/mcp_xero/auth/: __init__.py  oauth.py  token_store.py
src/mcp_xero/tools/: __init__.py  auth.py  contacts.py  invoices.py  payroll.py  quotes.py
src/mcp_xero/xero/: __init__.py  client.py
src/sm_mcp_xero_python/: __init__.py  __main__.py  server.py
src/sm_mcp_xero_python/auth/: oauth.py  token_store.py
src/sm_mcp_xero_python/tools/: __init__.py  auth.py  contacts.py  payroll.py  purchase_orders.py  quotes.py
src/sm_mcp_xero_python/xero/: client.py
