[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-mcp-xero-python"
version = "0.1.0"
description = "MCP Server for Xero integration - quotes and invoices management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SimpleMotion" }
]
keywords = ["mcp", "xero", "model-context-protocol", "invoices", "quotes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "xero-python>=6.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
sm-mcp-xero-python = "sm_mcp_xero_python:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_mcp_xero_python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
